# cg1-beleg

./: .gitignore  CMakeLists.txt  README.md  overlay.xcf
doc/: .gitignore  01-analyse.tex  02-loesungsansatz.tex  03-loesungsumsetzung.tex  04-installation-bedienung.tex  05-screenshots.tex  06-probleme.tex  07-ergebnisse.tex  dokumentation.tex
shaders/: fragment.fs  vertex.vs
src/: Application.cpp  Application.h  Axises.cpp  Axises.h  Billboard.cpp  Billboard.h  Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  Dice.cpp  Dice.h  FirstPersonCamera.cpp  FirstPersonCamera.h  GLException.cpp  GLException.h  Hemisphere.cpp  Hemisphere.h  InteractiveFirstPersonCamera.cpp  InteractiveFirstPersonCamera.h  Light.h  Material.h  Model.cpp  Model.h  Overlay.cpp  Overlay.h  Plane.cpp  Plane.h  Renderable.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  main.cpp
